--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.qiao</groupId>
-	<artifactId>reggie</artifactId>
+	<artifactId>auro-dining</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>reggie</name>
 	<description>Demo project for Spring Boot</description>
