--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,12 +20,24 @@ spring:
         format_sql: true
         globally_quoted_identifiers: true
   redis:
-    host: localhost
-    port: 6379
+    sentinel:
+      master: mymaster
+      nodes:
+        - localhost:26379
+        - localhost:26380
+        - localhost:26381
     database: 0
+    timeout: 3000ms
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: -1ms
   cache:
     redis:
-      time-to-live: 1800000
+      time-to-live: 1800000ms
+      cache-null-values: true
 
 
 reggie:
