--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,12 +20,8 @@ spring:
         format_sql: true
         globally_quoted_identifiers: true
   redis:
-    sentinel:
-      master: mymaster
-      nodes:
-        - localhost:26379
-        - localhost:26380
-        - localhost:26381
+    host: localhost
+    port: 6379
     database: 0
     timeout: 3000ms
     lettuce:
@@ -38,7 +34,6 @@ spring:
     redis:
       time-to-live: 1800000ms
       cache-null-values: true
-
 
 reggie:
   path: ${user.home}/Pictures/reggie_images/
