fix docker issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,37 +66,68 @@ jobs:
         DB_USERNAME: ${{ secrets.DB_USERNAME }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: |
-        ssh -i ~/.ssh/deploy_key ${EC2_USERNAME:-ec2-user}@$EC2_HOST << EOF
+        ssh -i ~/.ssh/deploy_key ${EC2_USERNAME:-ec2-user}@$EC2_HOST << 'DEPLOY_SCRIPT'
           set -e
-          cd ~/auro-dining
+          set -x  # Enable debug output
+          
+          echo "=== Starting deployment ==="
+          cd ~/auro-dining || { echo "ERROR: Cannot cd to ~/auro-dining"; exit 1; }
 
+          echo "=== Checking installation ==="
           if [ ! -f .installed ]; then
-            chmod +x incoming/install-docker.sh
-            ./incoming/install-docker.sh
+            echo "Running install script..."
+            chmod +x incoming/install-docker.sh || { echo "ERROR: Cannot chmod install script"; exit 1; }
+            ./incoming/install-docker.sh || { echo "ERROR: Install script failed"; exit 1; }
             touch .installed
+          else
+            echo "Already installed, skipping install script"
           fi
 
+          echo "=== Backing up existing JAR ==="
           if [ -f auro-dining-0.0.1-SNAPSHOT.jar ]; then
             mkdir -p backups
-            cp auro-dining-0.0.1-SNAPSHOT.jar "backups/auro-dining-\$(date +%Y%m%d-%H%M%S).jar"
-            ls -t backups/*.jar 2>/dev/null | tail -n +6 | xargs -r rm -f
+            cp auro-dining-0.0.1-SNAPSHOT.jar "backups/auro-dining-$(date +%Y%m%d-%H%M%S).jar" || { echo "WARNING: Backup failed"; }
+            ls -t backups/*.jar 2>/dev/null | tail -n +6 | xargs -r rm -f || true
+          else
+            echo "No existing JAR to backup"
           fi
 
-          mv -f incoming/auro-dining-0.0.1-SNAPSHOT.jar incoming/application-aws.yml incoming/Dockerfile incoming/docker-compose.yml . 2>/dev/null || true
-          [ -f incoming/install-docker.sh ] && mv -f incoming/install-docker.sh .
-          [ -f incoming/rollback-docker.sh ] && mv -f incoming/rollback-docker.sh . && chmod +x rollback-docker.sh
+          echo "=== Moving new files ==="
+          mv -f incoming/auro-dining-0.0.1-SNAPSHOT.jar . || { echo "ERROR: Cannot move JAR file"; exit 1; }
+          mv -f incoming/application-aws.yml . || { echo "ERROR: Cannot move application-aws.yml"; exit 1; }
+          mv -f incoming/Dockerfile . || { echo "ERROR: Cannot move Dockerfile"; exit 1; }
+          mv -f incoming/docker-compose.yml . || { echo "ERROR: Cannot move docker-compose.yml"; exit 1; }
+          [ -f incoming/install-docker.sh ] && mv -f incoming/install-docker.sh . || true
+          [ -f incoming/rollback-docker.sh ] && mv -f incoming/rollback-docker.sh . && chmod +x rollback-docker.sh || true
           rm -rf incoming
 
+          echo "=== Setting environment variables ==="
           export RDS_ENDPOINT="$RDS_ENDPOINT"
           export DB_USERNAME="$DB_USERNAME"
           export DB_PASSWORD="$DB_PASSWORD"
           
-          sudo -E docker-compose build --no-cache
-          sudo -E docker-compose up -d
+          echo "=== Checking Docker ==="
+          sudo docker --version || { echo "ERROR: Docker not found"; exit 1; }
+          sudo docker compose version || { echo "ERROR: Docker Compose not found"; exit 1; }
+          
+          echo "=== Ensuring Docker Buildx is available ==="
+          sudo docker buildx version || { echo "WARNING: Buildx not found, installing..."; sudo docker buildx install || true; }
+          sudo docker buildx ls || true
+          
+          echo "=== Building Docker image ==="
+          sudo -E docker compose build --no-cache || { echo "ERROR: Docker build failed"; exit 1; }
+          
+          echo "=== Starting containers ==="
+          sudo -E docker compose up -d || { echo "ERROR: Docker compose up failed"; exit 1; }
+          
+          echo "=== Waiting for containers to start ==="
           sleep 5
-          sudo docker-compose ps
-          echo "Deployment completed."
-        EOF
+          
+          echo "=== Checking container status ==="
+          sudo docker compose ps || { echo "ERROR: Cannot check container status"; exit 1; }
+          
+          echo "=== Deployment completed successfully ==="
+        DEPLOY_SCRIPT
 
     - name: Verify deployment
       run: |
