--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -127,27 +127,65 @@ jobs:
             BUILD_ARGS=""
             [ "${{ inputs.force_rebuild }}" == "true" ] && BUILD_ARGS="--no-cache"
           
-            # Ensure Buildx is available and configured
+            # Ensure Buildx is available and version >= 0.17.0
             echo "Checking Docker Buildx..."
-            if ! sudo docker buildx version >/dev/null 2>&1; then
-              echo "Buildx not found, checking installation..."
-              if [ -f /usr/local/lib/docker/cli-plugins/docker-buildx ]; then
-                echo "Buildx found in system location"
-              elif [ -f $HOME/.docker/cli-plugins/docker-buildx ]; then
-                echo "Linking Buildx to system location..."
-                sudo mkdir -p /usr/local/lib/docker/cli-plugins
-                sudo cp $HOME/.docker/cli-plugins/docker-buildx /usr/local/lib/docker/cli-plugins/docker-buildx
-                sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-buildx
+            BUILDX_VERSION="0.0.0"
+            if sudo docker buildx version >/dev/null 2>&1; then
+              BUILDX_VERSION=$(sudo docker buildx version 2>&1 | grep -oP 'github.com/docker/buildx \K[0-9.]+' || echo "0.0.0")
+              echo "Current Buildx version: $BUILDX_VERSION"
+            fi
+            
+            # Check if version is less than 0.17.0
+            NEED_UPGRADE=false
+            if [ "$BUILDX_VERSION" = "0.0.0" ]; then
+              echo "Buildx not found, installing..."
+              NEED_UPGRADE=true
+            else
+              # Compare versions: check if version < 0.17.0
+              # Extract major and minor version numbers
+              MAJOR=$(echo $BUILDX_VERSION | cut -d. -f1)
+              MINOR=$(echo $BUILDX_VERSION | cut -d. -f2)
+              
+              # Version comparison: need >= 0.17.0
+              if [ "$MAJOR" -eq 0 ] && [ "$MINOR" -lt 17 ]; then
+                echo "Buildx version $BUILDX_VERSION is too old (need >= 0.17.0), upgrading..."
+                NEED_UPGRADE=true
+              elif [ "$MAJOR" -gt 0 ]; then
+                echo "Buildx version $BUILDX_VERSION is acceptable"
               else
-                echo "WARNING: Buildx not found, but continuing..."
+                echo "Buildx version $BUILDX_VERSION is acceptable"
               fi
+            fi
+            
+            if [ "$NEED_UPGRADE" = "true" ]; then
+              echo "Installing/upgrading Buildx..."
+              DOCKER_CONFIG=${DOCKER_CONFIG:-$HOME/.docker}
+              mkdir -p $DOCKER_CONFIG/cli-plugins
+              
+              # Download latest Buildx
+              BUILDX_URL=$(curl -s https://api.github.com/repos/docker/buildx/releases/latest | grep "browser_download_url.*linux-x86_64" | cut -d '"' -f 4)
+              if [ -z "$BUILDX_URL" ]; then
+                BUILDX_URL="https://github.com/docker/buildx/releases/latest/download/buildx-v0.17.0.linux-amd64"
+              fi
+              
+              curl -L "$BUILDX_URL" -o $DOCKER_CONFIG/cli-plugins/docker-buildx
+              chmod +x $DOCKER_CONFIG/cli-plugins/docker-buildx
+              
+              # Install to system location
+              sudo mkdir -p /usr/local/lib/docker/cli-plugins
+              sudo rm -f /usr/local/lib/docker/cli-plugins/docker-buildx
+              sudo cp $DOCKER_CONFIG/cli-plugins/docker-buildx /usr/local/lib/docker/cli-plugins/docker-buildx
+              sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-buildx
+              
+              echo "Buildx upgraded, verifying..."
+              sudo docker buildx version
             fi
             
             # Create and use default builder if needed
             sudo docker buildx ls >/dev/null 2>&1 || sudo docker buildx create --name default --use 2>/dev/null || true
             sudo docker buildx inspect --bootstrap >/dev/null 2>&1 || true
             
-            echo "Buildx version:"
+            echo "Final Buildx version:"
             sudo docker buildx version || echo "Buildx check completed"
             
             # Use -E to preserve environment variables
