--- a/src/main/resources/application-aws.yml
+++ b/src/main/resources/application-aws.yml
@@ -7,9 +7,10 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     # RDS endpoint, username, and password are overridden via command line arguments in docker-compose.yml
-    url: jdbc:postgresql://localhost:5432/restaurant
-    username: postgres
-    password: placeholder
+    url: jdbc:postgresql://${RDS_ENDPOINT}:5432/auro-dining-db
+      username: ${DB_USERNAME}
+      password: ${DB_PASSWORD}
+      driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
